# gnss_sdr_linux

./: README.md  install.sh
BK_GPS_Monitoring/: CMakeCache.txt  README.md  build.ninja
BK_GPS_Monitoring/bundle/assets/conf/: test-datasource.conf
BK_GPS_Monitoring/bundle/assets/tmp/: end  msgq_end.cc  msgq_recv.cc  msgq_send.cc  recv
BK_GPS_Monitoring/bundle/data/flutter_assets/: AssetManifest.json  version.json
BK_GPS_Monitoring/intermediates_do_not_run/: new_linux
BK_GPS_Monitoring/plugins/new_linux_plugin/: cmake_install.cmake
assets/conf/: test-gnss-sdr_GPS_L1_rtlsdr_realtime.conf
assets/tmp/: msgq_recv.cc  msgq_send.cc  send
gnss_sdr/conf/: test-c2-0-GNSS-SDR-receiver.conf  test-c2-2-GNSS-SDR-receiver.conf
gnss_sdr/src/: CMakeLists.txt
gnss_sdr/src/algorithms/acquisition/adapters/: CMakeLists.txt
gnss_sdr/src/algorithms/acquisition/gnuradio_blocks/: CMakeLists.txt
gnss_sdr/src/algorithms/observables/gnuradio_blocks/: hybrid_observables_gs.cc  (+1 more)
gnss_sdr/src/core/receiver/: CMakeLists.txt  control_thread.cc  control_thread.h  gnss_block_factory.cc  gnss_flowgraph.cc  gnss_flowgraph.h
gnss_sdr/src/main/: CMakeLists.txt
gnss_sdr/src/main/receive/: CMakeLists.txt  receive_data.cc  receive_data.h
gnss_sdr/src/main/send/: CMakeLists.txt  send_data.cc  send_data.h
new_linux/: pubspec.yaml
new_linux/lib/: main.dart
new_linux/test/: widget_test.dart
project_release/: .ninja_deps  .ninja_log  cmake_install.cmake  rules.ninja
project_release/bundle/: clear_cache.sh
project_release/plugins/window_manager/: cmake_install.cmake
raspberry-release/: .ninja_deps  .ninja_log  install_manifest.txt
raspberry-release/bundle/: clear_cache.sh  new_linux  pvt.dat_230305_135525.gpx
raspberry-release/bundle/assets/conf/: test-datasource.conf
raspberry-release/flutter/: cmake_install.cmake
raspberry-release/plugins/screen_retriever/: cmake_install.cmake
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
release/bundle/: new_linux
release/bundle/data/flutter_assets/: NOTICES.Z
release/flutter/: cmake_install.cmake
release/intermediates_do_not_run/: new_linux
release/plugins/new_linux_plugin/: cmake_install.cmake
release/plugins/screen_retriever/: cmake_install.cmake
release/plugins/window_manager/: cmake_install.cmake
(+18 files in other folders)
